--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -1,9 +1,9 @@
 name: Download and Commit Files
 
 on:
-  workflow_dispatch: # 手动触发
+  workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *' # 每天凌晨 0:00 UTC 执行
+    - cron: '0 0 * * *' # Adjust this cron expression to your timezone
 
 jobs:
   download-and-commit:
@@ -18,22 +18,28 @@ jobs:
       - name: Read JSON file
         id: read-json
         run: |
-          echo "::set-output name=json_data::$(cat .github/link.json)"
+          if [ -f ".github/link.json" ]; then
+            echo "::set-output name=json_data::$(cat .github/link.json)"
+          else
+            echo "::error file=.github/link.json::link.json file not found"
+          fi
 
       - name: Download and rename files
         run: |
-          json_data=$(echo "${{ steps.read-json.outputs.json_data }}" | jq -r '.[] | "\(.filename) \(.link)"')
-          while IFS=' ' read -r filename link; do
-            curl -s "$link" -o "$filename" || echo "Failed to download $link" # 添加错误处理
-          done <<< "$json_data"
+          if [ -n "${{ steps.read-json.outputs.json_data }}" ]; then
+            jq -r '.[] | "\(.filename) \(.link)"' <<< "${{ steps.read-json.outputs.json_data }}" | while IFS=' ' read -r filename link; do
+              curl -s -f "$link" -o "$filename" || echo "Failed to download $link to $filename"
+            done
+          fi
 
       - name: Add files
         run: git add *
 
       - name: Commit changes
-        run: git commit -m "Download files from link.json" || echo "No changes to commit" # 添加错误处理
+        run: if git diff-index --quiet HEAD --; then echo "No changes to commit"; else git commit -m "Download files from link.json"; fi
 
       - name: Push changes
+        if: success()
         run: git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
