--- a/.github/workflows/cheakapi.yml
+++ b/.github/workflows/cheakapi.yml
@@ -24,8 +24,18 @@ jobs:
           current_time=$(date -Is)
           month_ago=$(date -Is -d "1 month ago")
           
-          # 获取API数据
+          # 获取API数据并验证
           response=$(curl -s "https://blogapi.pysio.online/checkh")
+          
+          # 打印响应以进行调试
+          echo "API Response:"
+          echo "$response"
+          
+          # 验证响应是否为有效的JSON
+          if ! echo "$response" | jq . >/dev/null 2>&1; then
+            echo "Error: Invalid JSON response"
+            exit 1
+          fi
           
           # 检查cheak.json是否存在
           if [ ! -f "cheak.json" ]; then
@@ -35,13 +45,16 @@ jobs:
           # 读取现有数据
           existing_data=$(cat cheak.json)
           
-          # 处理新数据
-          new_entry=$(echo $response | jq '.')
+          # 处理新数据（添加错误处理）
+          if ! new_entry=$(echo "$response" | jq -e '.'); then
+            echo "Error: Failed to parse response as JSON"
+            exit 1
+          fi
           # 创建用于比较的数据（排除last_heartbeat）
           new_entry_compare=$(echo $new_entry | jq 'del(.last_heartbeat)')
           
           # 检查是否存在记录
-          if [ "$(echo "$existing_data" | jq length)" -eq 0 ]; then
+          if [ "$(echo "$existing_data" | jq length)" -eq 0; then
             # 第一条记录
             updated_data=$(echo "[]" | jq ". + [{start_time: \"$current_time\", end_time: null, data: $new_entry}]")
           else
@@ -76,4 +89,3 @@ jobs:
           else
             git commit -m "自动更新 API 检查数据"
             git push origin HEAD:${{ github.ref }}
-          fi
