--- a/.github/workflows/cheakapi.yml
+++ b/.github/workflows/cheakapi.yml
@@ -25,7 +25,7 @@ jobs:
           month_ago=$(date -Is -d "1 month ago")
           
           # 获取API数据并验证
-          response=$(curl -s "https://blogapi.pysio.online/checkh")
+          response=$(curl -s "https://blogapi.pysio.online/check")
           
           # 打印响应以进行调试
           echo "API Response:"
