--- a/.github/workflows/year_cheak.yml
+++ b/.github/workflows/year_cheak.yml
@@ -27,20 +27,17 @@ jobs:
           current_time=$(date -Is)
           year_ago=$(date -Is -d "1 year ago")
           
-          # 获取API数据并验证
-          response=$(curl -s "https://blogapi.pysio.online/check")
+          # 获取API数据并预处理为单行JSON
+          response=$(curl -s "https://blogapi.pysio.online/check" | tr -d '\n')
           
           # 打印响应以进行调试
           echo "API Response:"
           echo "$response"
           
-          # 验证响应是否为有效的JSON
-          if ! echo "$response" | jq . >/dev/null 2>&1; then
-            echo "Error: Invalid JSON response"
-            exit 1
-          fi
+          # 直接解析JSON响应
+          new_entry=$(echo "$response" | jq -r '.')
           
-          # 检查year_cheak.json是否存在
+          # 检查JSON文件是否存在
           if [ ! -f "year_cheak.json" ]; then
             echo "[]" > year_cheak.json
           fi
@@ -48,36 +45,35 @@ jobs:
           # 读取现有数据
           existing_data=$(cat year_cheak.json)
           
-          # 处理新数据（添加错误处理）
-          if ! new_entry=$(echo "$response" | jq -e '.'); then
-            echo "Error: Failed to parse response as JSON"
-            exit 1
-          fi
           # 创建用于比较的数据（排除last_heartbeat）
-          new_entry_compare=$(echo $new_entry | jq 'del(.last_heartbeat)')
+          new_entry_compare=$(echo "$response" | jq 'del(.last_heartbeat)')
           
           # 检查是否存在记录
-          if [ "$(echo "$existing_data" | jq length)" -eq 0 ]; then
+          if [ "$(echo "$existing_data" | jq length)" -eq 0; then
             # 第一条记录
-            updated_data=$(echo "[]" | jq ". + [{start_time: \"$current_time\", end_time: null, data: $new_entry}]")
+            updated_data=$(jq -n --arg time "$current_time" --argjson data "$response" \
+              '[{start_time: $time, end_time: null, data: $data}]')
           else
-            last_entry=$(echo "$existing_data" | jq -r '. | last')
+            last_entry=$(echo "$existing_data" | jq -r '.[-1]')
             last_entry_compare=$(echo "$last_entry.data" | jq 'del(.last_heartbeat)')
             
-            if [ "$(echo "$last_entry_compare" | jq -r '.')" = "$(echo "$new_entry_compare" | jq -r '.')" ]; then
-              # 除last_heartbeat外数据相同，更新最后一条记录的 end_time
-              updated_data=$(echo "$existing_data" | jq "[.[0:-1], (.[-1] | .end_time = \"$current_time\")] | flatten")
+            if [ "$(echo "$new_entry_compare" | jq -r '.' | md5sum)" = "$(echo "$last_entry_compare" | jq -r '.' | md5sum)" ]; then
+              # 数据相同，更新最后一条记录的 end_time
+              updated_data=$(echo "$existing_data" | jq --arg time "$current_time" \
+                '[.[0:-1], (.[-1] | .end_time = $time)] | flatten')
             else
-              # 数据有变化，结束上一条记录并添加新记录
-              updated_data=$(echo "$existing_data" | jq "[.[0:-1], (.[-1] | .end_time = \"$current_time\"), {start_time: \"$current_time\", end_time: null, data: $new_entry}] | flatten")
+              # 数据有变化，添加新记录
+              updated_data=$(echo "$existing_data" | jq --arg time "$current_time" --argjson data "$response" \
+                '[.[0:-1], (.[-1] | .end_time = $time), {start_time: $time, end_time: null, data: $data}] | flatten')
             fi
           fi
           
           # 只保留最近一年的数据
-          filtered_data=$(echo "$updated_data" | jq "[.[] | select(.start_time >= \"$year_ago\")]")
+          filtered_data=$(echo "$updated_data" | jq --arg year_ago "$year_ago" \
+            '[.[] | select(.start_time >= $year_ago)]')
           
           # 写入文件
-          echo "$filtered_data" > year_cheak.json
+          echo "$filtered_data" | jq '.' > year_cheak.json
 
       - name: 配置 Git
         run: |
@@ -92,4 +88,3 @@ jobs:
           else
             git commit -m "自动更新年度 API 检查数据"
             git push origin HEAD:${{ github.ref }}
-          fi
