--- a/.github/workflows/cheakapi.yml
+++ b/.github/workflows/cheakapi.yml
@@ -27,15 +27,8 @@ jobs:
           # 获取API数据并验证
           response=$(curl -s "https://blogapi.pysio.online/check")
           
-          # 打印响应以进行调试
           echo "API Response:"
           echo "$response"
-          
-          # 验证响应是否为有效的JSON并进行预处理
-          if ! response_json=$(echo "$response" | jq -R -s -c '.' | jq '.'); then
-            echo "Error: Invalid JSON response"
-            exit 1
-          fi
           
           # 检查JSON文件是否存在
           if [ ! -f "cheak.json" ]; then
@@ -45,35 +38,34 @@ jobs:
           # 读取现有数据
           existing_data=$(cat cheak.json)
           
-          # 处理新数据（添加错误处理）
-          new_entry=$response_json
-          new_entry_compare=$(echo "$new_entry" | jq 'del(.last_heartbeat)')
+          # 处理新数据（使用echo -n避免额外的换行）
+          new_entry_compare=$(echo -n "$response" | jq 'del(.last_heartbeat)')
           
           # 检查是否存在记录
           if [ "$(echo "$existing_data" | jq 'length')" -eq 0; then
             # 第一条记录
-            updated_data=$(echo "[]" | jq --arg time "$current_time" --argjson data "$new_entry" \
-              '. + [{start_time: $time, end_time: null, data: $data}]')
+            updated_data=$(echo -n "$response" | jq -R . | jq --arg time "$current_time" \
+              '[{start_time: $time, end_time: null, data: (input | fromjson)}]')
           else
-            last_entry=$(echo "$existing_data" | jq -r 'last')
-            last_entry_compare=$(echo "$last_entry.data" | jq 'del(.last_heartbeat)')
+            last_entry=$(echo "$existing_data" | jq '.[-1]')
+            last_entry_compare=$(echo "$last_entry" | jq '.data | del(.last_heartbeat)')
             
-            if jq -n --argjson a "$last_entry_compare" --argjson b "$new_entry_compare" '$a == $b'; then
+            # 比较数据（排除last_heartbeat）
+            if [ "$(echo "$new_entry_compare" | jq -c '.')" = "$(echo "$last_entry_compare" | jq -c '.')" ]; then
               # 数据相同，更新最后一条记录的 end_time
               updated_data=$(echo "$existing_data" | jq --arg time "$current_time" \
                 '[.[0:-1], (.[-1] | .end_time = $time)] | flatten')
             else
               # 数据有变化，添加新记录
-              updated_data=$(echo "$existing_data" | jq --arg time "$current_time" --argjson data "$new_entry" \
-                '[.[0:-1], (.[-1] | .end_time = $time), {start_time: $time, end_time: null, data: $data}] | flatten')
+              updated_data=$(echo "$existing_data" | jq --arg time "$current_time" \
+                --arg response "$response" \
+                '[.[0:-1], (.[-1] | .end_time = $time), {start_time: $time, end_time: null, data: ($response | fromjson)}] | flatten')
             fi
           fi
           
-          # 写入文件（添加错误处理）
-          if ! echo "$updated_data" | jq . > cheak.json; then
-            echo "Error: Failed to write JSON file"
-            exit 1
-          fi
+          # 只保留最近一个月的数据并写入文件
+          echo "$updated_data" | jq --arg month_ago "$month_ago" \
+            '[.[] | select(.start_time >= $month_ago)]' > cheak.json
 
       - name: 配置 Git
         run: |
