--- a/.github/workflows/cheakapi.yml
+++ b/.github/workflows/cheakapi.yml
@@ -79,4 +79,5 @@ jobs:
             echo "没有检测到更改，跳过提交。"
           else
             git commit -m "自动更新 API 检查数据"
-            git push origin HEAD:${{ github.ref }}
+            git push origin HEAD:main
+          fi
