--- a/.github/workflows/year_cheak.yml
+++ b/.github/workflows/year_cheak.yml
@@ -82,4 +82,4 @@ jobs:
             echo "没有检测到更改，跳过提交。"
           else
             git commit -m "自动更新年度 API 检查数据"
-            git push origin HEAD:${{ github.ref }}
+            git push origin HEAD:main
